# LearningPlatform

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  commands.md  data_models.md  main.py  models.py  reset_db.py  test_progress_service.py
infra/: docker-compose.dev.yml
services/auth_service/: Dockerfile  pyproject.toml
services/auth_service/app/: app.py  main.py
services/auth_service/app/api/: main_router.py
services/auth_service/app/common/db/: models_registry.py  session.py
services/auth_service/app/core/: config.py  logging.py  security.py  startup.py
services/auth_service/app/middleware/: auth.py
services/auth_service/app/modules/auth/: models.py  router.py  schemas.py
services/auth_service/app/modules/roles/: models.py  router.py  schemas.py
services/auth_service/app/modules/users/: models.py  router.py  schemas.py  utils.py
services/auth_service/migrations/: env.py
services/auth_service/migrations/versions/: 5b05cdc443b8_introduce_roles_module.py  89c37c91c813_add_user_flags.py  c6cedc73755c_init_user_tables.py
services/auth_service/tests/: conftest.py  pytest.ini  test_auth.py  test_roles.py  test_users.py
services/courses_service/: Dockerfile  pyproject.toml
services/courses_service/app/: app.py
services/courses_service/app/api/: main_router.py
services/courses_service/app/common/db/: base.py  session.py
services/courses_service/app/core/: config.py
services/courses_service/app/middleware/: auth.py
services/courses_service/app/modules/courses/: enums.py  exceptions.py  models.py  models_import.py  repositories_import.py  router.py  schemas_import.py  services_import.py
services/courses_service/app/modules/courses/models/: Answer.py  Base.py  Course.py  CourseReview.py  CourseUser.py  Lesson.py  Question.py  Test.py  User.py
services/courses_service/app/modules/courses/repositories/: AnswerRepository.py  CascadeDeleteRepository.py  CourseRepository.py  CourseReviewRepository.py  CourseUserRepository.py  LessonRepository.py  QuestionRepository.py  TestRepository.py  UserRepository.py
services/courses_service/app/modules/courses/routers/: AnswerRouter.py  CourseReviewRouter.py  CourseRouter.py  CourseUserRouter.py  LessonRouter.py  QuestionRouter.py  TestRouter.py  exceptions.py  requre.py
services/courses_service/app/modules/enrollments/: models.py  schemas.py
services/courses_service/tests/: conftest.py  test_courses_router.py
(+55 files in other folders)
